--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <div class="card">
+            <img class="avatar" src="  "
+                alt="Profile-Pic">
+            <div>
+                <h3>Abel Mathew Simon</h3>
+                <p>Frontend Developer</p>
+                <h4>Kerala, India</h4>
+            </div>
+        </div>
+    </body>
+</html>
